2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/Employee_Review_Forms_FIN_HR_IT_QA__c.object-meta.xml
<CustomObject>
    <description>Employee Review Forms (FIN/HR/IT/QA)
Finance/Human Resource/IT/Quality Audit</description>
    <label>Employee Review Forms (FIN/HR/IT/QA)</label>
    <nameField>
        <displayFormat>EMP-{DD}-{MM}-{YYYY}-{0000}</displayFormat>
        <label>Employee Review Forms (FIN/SHP/GM/REG) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Review Forms (FIN/HR/IT/QA)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>