2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Accounting_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Concepts__c</fullName>
    <description>Timely and accurate reporting of company expenses on its income statement in the period in which the related revenues are earned.
-Matching, Accruals,  Materiality,  Going Concerned,  Recognition &amp; Disclosure Concept</description>
    <inlineHelpText>Timely and accurate reporting of company expenses on its income statement in the period in which the related revenues are earned.
-Matching, Accruals,  Materiality,  Going Concerned,  Recognition &amp; Disclosure Concept</inlineHelpText>
    <label>Accounting Concepts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>