2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable__c</fullName>
    <description>Ability to manage vendor set-up in the System and process payment in a timely and accurate manner where cashflows permit.
-Creditors: Credit/COD payment cycle, exchange rate, overseas remittance, Invoice/credit notes
-Review &amp; Verify invoices to Purchase Order/Delivery Order/Physical Verification/Costing Sheet /Additional Cost Allocation
-Schedule invoices according to payment terms for the payment processing cycle
-Resolve invoice discrepancies &amp; issues
-Error rate to be kept below 1%</description>
    <inlineHelpText>Ability to manage vendor set-up in the System and process payment in a timely and accurate manner where cashflows permit.
-Creditors: Credit/COD payment cycle, exchange rate, overseas remittance, Invoice/credit notes
-Review &amp; Verify invoices to Purchase Order/Delivery Order/Physical Verification/Costing Sheet /Additional Cost Allocation
-Schedule invoices according to payment terms for the payment processing cycle
-Resolve invoice discrepancies &amp; issues
-Error rate to be kept below 1%</inlineHelpText>
    <label>Accounts Payable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>