2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Accounts_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable__c</fullName>
    <description>Generate age analysis &amp; monitor customer account details for non-payments, delayed payments &amp; other irregularities.
-Initiate Collections effort
-Ensure timely collections eg COD immediate, 30 days or 60 days term
-Ensure all clients remain informed on their outstanding &amp; deadlines by email reminders &amp; SOA
-Review &amp; Resolve billing discrepancies
-Cash on Hand (Petty Cash float) &amp; Cash at Bank: Local Currency/USD, exchange rate, book rate vs spot rate
-Cashflow: weekly banking &amp; reconciliation</description>
    <inlineHelpText>Generate age analysis &amp; monitor customer account details for non-payments, delayed payments &amp; other irregularities.
-Initiate Collections effort
-Ensure timely collections eg COD immediate, 30 days or 60 days term
-Ensure all clients remain informed on their outstanding &amp; deadlines by email reminders &amp; SOA
-Review &amp; Resolve billing discrepancies
-Cash on Hand (Petty Cash float) &amp; Cash at Bank: Local Currency/USD, exchange rate, book rate vs spot rate
-Cashflow: weekly banking &amp; reconciliation</inlineHelpText>
    <label>Accounts Receivable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>