2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Adaptability__c.field-meta.xml
<CustomField>
    <fullName>Adaptability__c</fullName>
    <description>(Ability to rapidly learn new skills and behaviors in response to changing and rising circumstances and/or challenges, and changing one&apos;s actions when doing teamwork with coworkers to ensure the success of a project. People with adaptability skills are flexible. It is important because it promotes growth within a role.)</description>
    <inlineHelpText>Ability to rapidly learn new skills and behaviors in response to changing and rising circumstances and/or challenges, and changing one&apos;s actions when doing teamwork with coworkers to ensure the success of a project. People with adaptability skills are flexible, it is important because it promotes growth within a role.</inlineHelpText>
    <label>Adaptability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>