2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Admin_Support_HR__c.field-meta.xml
<CustomField>
    <fullName>Admin_Support_HR__c</fullName>
    <description>-Maintaining the condition of the office and arranging for necessary repairs &amp; servicing. 
-Preparation, analysis, negotiation, and review of contracts related to purchasing materials, supplies, or services</description>
    <inlineHelpText>-Maintaining the condition of the office and arranging for necessary repairs &amp; servicing. 
-Preparation, analysis, negotiation, and review of contracts related to purchasing materials, supplies, or services</inlineHelpText>
    <label>Admin Support [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>