2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/AM_HHG_Operations_Art_Eco_System_FIN__c.field-meta.xml
<CustomField>
    <fullName>AM_HHG_Operations_Art_Eco_System_FIN__c</fullName>
    <description>-Key Account Customers of HT
-Accreditations eg ICEFAT, ARTIM, FIDI &amp; FAIM
-Competitors and partners of HT</description>
    <inlineHelpText>-Key Account Customers of HT
-Accreditations eg ICEFAT, ARTIM, FIDI &amp; FAIM
-Competitors and partners of HT</inlineHelpText>
    <label>AM &amp; HHG Operations/Art Eco-System [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>