2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Billing_and_Daily_Operations__c.field-meta.xml
<CustomField>
    <fullName>Billing_and_Daily_Operations__c</fullName>
    <description>-Manage billings to be captured &amp; identify inconsistencies
-Ensure all billings are completed in a timely manner
-Update accounts receivable database with the new invoice generated
-Ensure all invoices are generated in a timely manner (turnaround time-1 day)
-Check the validity of the accounts code (turnaround time-1 day)

Purchasing cycle management: Issue PO, physical verify, DO, match PO to invoice, payment</description>
    <inlineHelpText>-Manage billings to be captured &amp; identify inconsistencies
-Ensure all billings are completed in a timely manner
-Update accounts receivable database with the new invoice generated
-Ensure all invoices are generated in a timely manner (turnaround time-1 day)
-Check the validity of the accounts code (turnaround time-1 day)

Purchasing cycle management: Issue PO, physical verify, DO, match PO to invoice, payment</inlineHelpText>
    <label>Billing and Daily Operations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>