2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Bookkeeping_Acct_Standards_Practices__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Acct_Standards_Practices__c</fullName>
    <description>In accordance with local Financial Reporting Standards (FRS)
-Technical Knowledge update eg. Budget, Corporate Tax, local regulatory requirements (e.g. GST, VAT, etc.)</description>
    <inlineHelpText>In accordance with local Financial Reporting Standards (FRS)
-Technical Knowledge update eg. Budget, Corporate Tax, local regulatory requirements (e.g. GST, VAT, etc.)</inlineHelpText>
    <label>Bookkeeping, Acct. Standards &amp; Practices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>