2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Accounting_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Comment_Accounting_Concepts__c</fullName>
    <description>Supervisor Comment Accounting Concepts.</description>
    <inlineHelpText>Supervisor Comment Accounting Concepts.</inlineHelpText>
    <label>Comment Accounting Concepts</label>
    <type>TextArea</type>
</CustomField>