2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Comment_Accounts_Payable__c</fullName>
    <description>Supervisor Comment Accounts Payable.</description>
    <inlineHelpText>Supervisor Comment Accounts Payable.</inlineHelpText>
    <label>Comment Accounts Payable</label>
    <type>TextArea</type>
</CustomField>