2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Accounts_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Comment_Accounts_Receivable__c</fullName>
    <description>Supervisor Comment Accounts Receivable.</description>
    <inlineHelpText>Supervisor Comment Accounts Receivable.</inlineHelpText>
    <label>Comment Accounts Receivable</label>
    <type>TextArea</type>
</CustomField>