2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Adaptability__c.field-meta.xml
<CustomField>
    <fullName>Comment_Adaptability__c</fullName>
    <description>Supervisor Comment Adaptability.</description>
    <inlineHelpText>Supervisor Comment Adaptability.</inlineHelpText>
    <label>Comment Adaptability</label>
    <type>TextArea</type>
</CustomField>