2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Admin_Support_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Admin_Support_HR__c</fullName>
    <description>Supervisor Comment Admin Support [HR].</description>
    <inlineHelpText>Supervisor Comment Admin Support [HR].</inlineHelpText>
    <label>Comment Admin Support [HR]</label>
    <type>TextArea</type>
</CustomField>