2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Artmove_Ops_HHGS_Art_Eco_System__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artmove_Ops_HHGS_Art_Eco_System__c</fullName>
    <description>Supervisor Comment Artmove Operations/HHGS/Art Eco-System.</description>
    <inlineHelpText>Supervisor Comment Artmove Operations/HHGS/Art Eco-System.</inlineHelpText>
    <label>Comment Artmove Ops/HHGS/Art Eco-System</label>
    <type>TextArea</type>
</CustomField>