2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Billing_and_Daily_Operations__c.field-meta.xml
<CustomField>
    <fullName>Comment_Billing_and_Daily_Operations__c</fullName>
    <description>Supervisor Comment Billing and Daily Operations.</description>
    <inlineHelpText>Supervisor Comment Billing and Daily Operations.</inlineHelpText>
    <label>Comment Billing and Daily Operations</label>
    <type>TextArea</type>
</CustomField>