2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Bookkeeping_Acct_Std_Pract__c.field-meta.xml
<CustomField>
    <fullName>Comment_Bookkeeping_Acct_Std_Pract__c</fullName>
    <description>Supervisor Comment Bookkeeping, Acct. Standards &amp; Practices.</description>
    <inlineHelpText>Supervisor Comment Bookkeeping, Acct. Standards &amp; Practices.</inlineHelpText>
    <label>Comment Bookkeeping, Acct. Std &amp; Pract</label>
    <type>TextArea</type>
</CustomField>