2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Communication_Skills_FIN__c.field-meta.xml
<CustomField>
    <fullName>Comment_Communication_Skills_FIN__c</fullName>
    <description>Supervisor Comment Communication Skills [FIN].</description>
    <inlineHelpText>Supervisor Comment Communication Skills [FIN].</inlineHelpText>
    <label>Comment Communication Skills [FIN]</label>
    <type>TextArea</type>
</CustomField>