2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Communication_Skills_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Communication_Skills_HR__c</fullName>
    <description>Supervisor Comment Communication Skills [HR].</description>
    <inlineHelpText>Supervisor Comment Communication Skills [HR].</inlineHelpText>
    <label>Comment Communication Skills [HR]</label>
    <type>TextArea</type>
</CustomField>