2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Communication_Skills_IT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Communication_Skills_IT__c</fullName>
    <description>Supervisor Comment Communication Skills [IT]</description>
    <inlineHelpText>Supervisor Comment Communication Skills [IT]</inlineHelpText>
    <label>Comment Communication Skills [IT]</label>
    <type>TextArea</type>
</CustomField>