2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Company_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Comment_Company_Knowledge__c</fullName>
    <description>Supervisor Comment Company Knowledge.</description>
    <inlineHelpText>Supervisor Comment Company Knowledge.</inlineHelpText>
    <label>Comment Company Knowledge</label>
    <type>TextArea</type>
</CustomField>