2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Company_s_Act__c.field-meta.xml
<CustomField>
    <fullName>Comment_Company_s_Act__c</fullName>
    <description>Supervisor Comment Company&apos;s Act.</description>
    <inlineHelpText>Supervisor Comment Company&apos;s Act.</inlineHelpText>
    <label>Comment Company&apos;s Act</label>
    <type>TextArea</type>
</CustomField>