2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Company_Secretarial_matters__c.field-meta.xml
<CustomField>
    <fullName>Comment_Company_Secretarial_matters__c</fullName>
    <description>Supervisor Comment Company Secretarial matters.</description>
    <inlineHelpText>Supervisor Comment Company Secretarial matters.</inlineHelpText>
    <label>Comment Company Secretarial matters</label>
    <type>TextArea</type>
</CustomField>