2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Compensation_Benefits_MGNT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Compensation_Benefits_MGNT__c</fullName>
    <description>Supervisor Comment Compensation &amp; Benefits MGNT.</description>
    <inlineHelpText>Supervisor Comment Compensation &amp; Benefits MGNT.</inlineHelpText>
    <label>Comment Compensation &amp; Benefits MGNT</label>
    <type>TextArea</type>
</CustomField>