2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Computer_Literacy__c.field-meta.xml
<CustomField>
    <fullName>Comment_Computer_Literacy__c</fullName>
    <description>Supervisor Comment Computer Literacy.</description>
    <inlineHelpText>Supervisor Comment Computer Literacy.</inlineHelpText>
    <label>Comment Computer Literacy</label>
    <type>TextArea</type>
</CustomField>