2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Computer_Literacy_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Computer_Literacy_HR__c</fullName>
    <description>Supervisor Comment Computer Literacy [HR].</description>
    <inlineHelpText>Supervisor Comment Computer Literacy [HR].</inlineHelpText>
    <label>Comment Computer Literacy [HR]</label>
    <type>TextArea</type>
</CustomField>