2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Computer_Skill__c.field-meta.xml
<CustomField>
    <fullName>Comment_Computer_Skill__c</fullName>
    <description>Supervisor Comment Computer Skill.</description>
    <inlineHelpText>Supervisor Comment Computer Skill.</inlineHelpText>
    <label>Comment Computer Skill</label>
    <type>TextArea</type>
</CustomField>