2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Conflict_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Conflict_Management__c</fullName>
    <description>Supervisor Comment Conflict Management</description>
    <inlineHelpText>Supervisor Comment Conflict Management.</inlineHelpText>
    <label>Comment Conflict Management</label>
    <type>TextArea</type>
</CustomField>