2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Contract_Management__c</fullName>
    <description>Supervisor Comment Contract Management.</description>
    <inlineHelpText>Supervisor Comment Contract Management.</inlineHelpText>
    <label>Comment Contract Management</label>
    <type>TextArea</type>
</CustomField>