2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Customer_Service_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Customer_Service_HR__c</fullName>
    <description>Supervisor Comment Customer Service [HR].</description>
    <inlineHelpText>Supervisor Comment Customer Service [HR].</inlineHelpText>
    <label>Comment Customer Service [HR]</label>
    <type>TextArea</type>
</CustomField>