2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Data_Management_FIN__c.field-meta.xml
<CustomField>
    <fullName>Comment_Data_Management_FIN__c</fullName>
    <description>Supervisor Comment Data Management [FIN].</description>
    <inlineHelpText>Supervisor Comment Data Management [FIN].</inlineHelpText>
    <label>Comment Data Management [FIN]</label>
    <type>TextArea</type>
</CustomField>