2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Comment_Discipline__c</fullName>
    <description>Supervisor Comment Discipline</description>
    <inlineHelpText>Supervisor Comment Discipline.</inlineHelpText>
    <label>Comment Discipline</label>
    <type>TextArea</type>
</CustomField>