2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Effective_Time_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Effective_Time_Management__c</fullName>
    <description>Supervisor Comment Effective Time Management</description>
    <inlineHelpText>Supervisor  Comment Effective Time Management.</inlineHelpText>
    <label>Comment Effective Time Management</label>
    <type>TextArea</type>
</CustomField>