2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Facilities_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Facilities_Management__c</fullName>
    <description>Supervisor Comment Facilities Management.</description>
    <inlineHelpText>Supervisor Comment Facilities Management.</inlineHelpText>
    <label>Comment Facilities Management</label>
    <type>TextArea</type>
</CustomField>