2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Financial_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Financial_Management__c</fullName>
    <description>Supervisor Comment Financial Management.</description>
    <inlineHelpText>Supervisor Comment Financial Management.</inlineHelpText>
    <label>Comment Financial Management</label>
    <type>TextArea</type>
</CustomField>