2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_for_Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_Special_Skills__c</fullName>
    <description>Supervisor Comment for Special Skills.</description>
    <inlineHelpText>Supervisor Comment for Special Skills.</inlineHelpText>
    <label>Comment for Special Skills</label>
    <type>TextArea</type>
</CustomField>