2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_General_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Comment_General_Ledger__c</fullName>
    <description>Supervisor Comment General Ledger.</description>
    <inlineHelpText>Supervisor Comment General Ledger.</inlineHelpText>
    <label>Comment General Ledger</label>
    <type>TextArea</type>
</CustomField>