2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Grievances_Comp_Discipline_MGNT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Grievances_Comp_Discipline_MGNT__c</fullName>
    <description>Supervisor Comment Grievances Comp &amp;Discipline MGNT.</description>
    <inlineHelpText>Supervisor Comment Grievances Comp &amp;Discipline MGNT.</inlineHelpText>
    <label>Comment Grievances Comp &amp;Discipline MGNT</label>
    <type>TextArea</type>
</CustomField>